müşteri entegrasyonu/kalan modüllerin apileri güncellendi